[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "drawsnek"
author = "Glyph"
author-email = "glyph@twistedmatrix.com"
home-page = "https://github.com/glyph/drawsnek"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "pygame==2.0.0.dev10",
    "Twisted[tls]==20.3.0",
]
